log
Tue 02 May 2023 08:46:34 PM UTC: 
 tests:  0|5
total_score: 0/70
1c4aa38
Thu 04 May 2023 10:27:44 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|5
total_score: 0/70
3f7f8dd
Thu 04 May 2023 10:33:02 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3273183
Fri 05 May 2023 06:32:13 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|4
total_score: 15/70
ac0f5c3
Fri 05 May 2023 07:01:08 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++------
 1 file changed, 26 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:11: error: unused variable ‘arraySub’ [-Werror=unused-variable]
   54 |       int arraySub[10];
      |           ^~~~~~~~
sudoku.c:53:11: error: unused variable ‘arrayCol’ [-Werror=unused-variable]
   53 |       int arrayCol[10];
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eff722a
Fri 05 May 2023 07:01:22 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:11: error: unused variable ‘arraySub’ [-Werror=unused-variable]
   54 |       int arraySub[10];
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa31f10
Fri 05 May 2023 07:01:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ad0007d
